manifests/istio_ingress/istio_ingress_template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ${application_name}-gateway
  namespace: ${namespace}
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "istio.${application_name}.${env}.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${application_name}-virtual-service
  namespace: ${namespace}
spec:
  hosts:
  - "istio.${application_name}.${env}.com"
  gateways:
  - ${application_name}-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: ${server_port}
        host: ${application_name}-service
